<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/top"
        android:title="@string/main"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/latest"
        android:title="@string/latest"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/input"
        android:title="@string/input"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/graph"
        android:title="@string/graph"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
