<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity"
    android:background="#f8a8a8"
    android:id="@+id/History"
    android:longClickable="false">

    <TableLayout
        android:id="@+id/Item"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/date" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/time" />

            <TextView
                android:id="@+id/Weight"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/Target"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/target" />

        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
