<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="#abbbb8">

    <TableLayout
        android:id="@+id/Setting"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="0,1"
        android:paddingTop="15dp">

        <!--身長-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/Height"
            android:gravity="bottom|center_horizontal">

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="left|bottom"
                android:paddingLeft="30dp"
                android:text="@string/height" />

            <EditText
                android:id="@+id/heightNum"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:inputType="numberDecimal"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="35dp"
                android:ems="10"
                android:gravity="bottom|center"
                android:text="00.0" />

            <TextView
                android:id="@+id/cm"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="bottom|center"
                android:text="cm" />

        </TableRow>

        <!--目標体重-->
        <TableRow
            android:id="@+id/TargetWeight"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="bottom|center_horizontal">

            <TextView
                android:id="@+id/targetWeight"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="left|bottom"
                android:paddingLeft="30dp"
                android:text="@string/target_weight" />

            <EditText
                android:id="@+id/targetWeightNum"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:inputType="numberDecimal"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="35dp"
                android:ems="10"
                android:gravity="bottom|center"
                android:text="00.0" />

            <TextView
                android:id="@+id/kg"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="bottom|center"
                android:text="kg" />

        </TableRow>

        <!--肥満度-->
        <TableRow
            android:id="@+id/doo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="bottom|center_horizontal">

            <TextView
                android:id="@+id/DOO"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="left|bottom"
                android:paddingLeft="30dp"
                android:text="@string/DOO" />

            <TextView
                android:id="@+id/DOOjudge"
                android:layout_width="130dp"
                android:layout_height="70dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""
                android:gravity="center" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:textColor="#FFffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="bottom|center"
                android:text="" />

        </TableRow>

    </TableLayout>

    <!--肥満度-->

    <!--登録ボタン-->
    <LinearLayout
        android:id="@+id/Enter"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/eButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:textColor="#FFffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:radius="50dp"
            android:gravity="center"
            android:text="@string/enter" />
    </LinearLayout>

    <!--初期化ボタン-->
    <LinearLayout
        android:id="@+id/Reset"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/rButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:textColor="#FFffffff"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:radius="50dp"
            android:gravity="center"
            android:text="@string/reset" />
    </LinearLayout>


</LinearLayout>